# binance-rs

./: Cargo.toml
src/: account.rs  api.rs  client.rs  config.rs  errors.rs  general.rs  market.rs  model.rs  userstream.rs
src/futures/: account.rs  general.rs  market.rs  mod.rs  model.rs  userstream.rs  websockets.rs
tests/: account_tests.rs  general_tests.rs
