[package]
name = "binance"
version = "0.12.3"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]
edition = "2018"

description = "Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/binance/"
repository = "https://github.com/wisespace-io/binance-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/binance-rs" }

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
hmac = "0.10.1"
sha2 = "0.9"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.2", features = ["json"] }
tungstenite = "0.13.0"
tokio-tungstenite = "0.14.0"
tokio = "1.4.0"
url = "2.2.0"

[features]
default = ["vendored-tls"]
vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls", "tokio-tungstenite/native-tls-vendored"]
blocking = ["reqwest/blocking"]

[dev-dependencies]
csv ="1.1.5"
mockito = "0.30.0"
env_logger = "0.8.3"

[dependencies.futures-util]
default-features = false
features = ["async-await", "sink", "std"]
version = "0.3"


[[example]]
name = "binance_endpoints"
required-features = ["blocking"]


[[example]]
name = "binance_futures_endpoints"
required-features = ["blocking"]

[[example]]
name = "binance_save_all_trades"
required-features = ["blocking"]

[[example]]
name = "binance_websockets"
required-features = ["blocking"]

[[test]]
name = "account_tests"
required-features = ["blocking"]

[[test]]
name = "general_tests"
required-features = ["blocking"]